apps/server-ndmastery/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-ndmastery-stable
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: server-ndmastery
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: stable
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: server-ndmastery
---
apiVersion: v1
kind: Service
metadata:
  name: server-ndmastery-canary
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: server-ndmastery
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: canary
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: server-ndmastery
