apps/server-ndmastery/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-ndmastery
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: server-ndmastery
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`server.ndmastery.com`)
      kind: Rule
      services:
        - name: server-ndmastery-wrr
          kind: TraefikService
      middlewares:
        - name: ndmastery-secure-headers
        - name: ndmastery-compress
  tls:
    secretName: server-ndmastery-tls
    options:
      name: ndmastery-modern-tls
      namespace: ndmastery
